--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -300,6 +300,19 @@
 				<artifactId>spotbugs-maven-plugin</artifactId>
 				<version>3.1.8</version>
 			</plugin>
+			<plugin>
+    				<groupId>org.jacoco</groupId>
+      				<artifactId>jacoco-maven-plugin</artifactId>
+     				<executions>
+       					<execution>
+         					<id>report</id>
+          					<goals>
+            						<goal>report-aggregate</goal>
+         					 </goals>
+        					 <phase>verify</phase>
+       					</execution>
+     				</executions>
+    			</plugin>
 		</plugins>
 	</build>
 
