--- a/sm-shop/pom.xml
+++ b/sm-shop/pom.xml
@@ -239,6 +239,19 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+			<plugin>
+    				<groupId>org.jacoco</groupId>
+      				<artifactId>jacoco-maven-plugin</artifactId>
+     				<executions>
+       					<execution>
+         					<id>report</id>
+          					<goals>
+            						<goal>report-aggregate</goal>
+         					 </goals>
+        					 <phase>verify</phase>
+       					</execution>
+     				</executions>
+    			</plugin>
 		</plugins>
 		<finalName>ROOT</finalName>
 	</build>
