--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -25,6 +25,7 @@
 		<spring.vault.version>1.1.3.RELEASE</spring.vault.version>
 		<coverage.lines>.00</coverage.lines>
 		<coverage.branches>.00</coverage.branches>
+		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../sm-core/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
