--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<coverage.branches>.37</coverage.branches>
 		<!-- api documentation -->
 		<swagger.version>2.9.2</swagger.version>
+		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
