--- a/sm-core-model/pom.xml
+++ b/sm-core-model/pom.xml
@@ -52,7 +52,7 @@
 		<commons-io.version>2.5</commons-io.version>
 		<jackson-version-databind>2.9.9.2</jackson-version-databind>
 		<jackson-version>2.9.9</jackson-version>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.coverage.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
