--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -25,7 +25,7 @@
 		<spring.vault.version>1.1.3.RELEASE</spring.vault.version>
 		<coverage.lines>.00</coverage.lines>
 		<coverage.branches>.00</coverage.branches>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.coverage.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
