--- a/sm-shop-model/pom.xml
+++ b/sm-shop-model/pom.xml
@@ -45,7 +45,7 @@
 		<shopizer.version>2.7.0</shopizer.version>
 		<!-- api documentation -->
 		<swagger.version>2.9.2</swagger.version>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.coverage.jacoco.reportPath>
 	</properties>
 
 
