--- a/sm-shop/pom.xml
+++ b/sm-shop/pom.xml
@@ -28,7 +28,7 @@
 		<coverage.lines>.04</coverage.lines>
         <coverage.branches>.01</coverage.branches>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.coverage.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
