--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+  
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
@@ -48,8 +49,7 @@
 		<coverage.branches>.37</coverage.branches>
 		<!-- api documentation -->
 		<swagger.version>2.9.2</swagger.version>
-		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/site/jacoco-aggregate/jacoco.exec</sonar.coverage.jacoco.reportPath>
-		<aggregate.report.dir>target/site/jacoco-aggregate/jacoco.exec</aggregate.report.dir>
+		<sonar.coverage.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.coverage.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
@@ -234,62 +234,72 @@
 	</pluginRepositories>
 
 	<build>
-		<pluginManagement>
-    			<plugins>
-     				<plugin>
-        				<groupId>org.jacoco</groupId>
-        				<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.3</version>
-        				<executions>
-          					<execution>
-           						<goals>
-            							<goal>prepare-agent</goal>
-           						</goals>
-         
-						</execution>
-      					</executions>
-     				</plugin>
-   			</plugins>
-  		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
 				<version>3.1.8</version>
 			</plugin>
-			
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<configuration>
+					<exclude>org.drools.*</exclude>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-prepare-agent-integration</id>
+						<goals>
+							<goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report-integration</id>
+						<goals>
+							<goal>report-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>${coverage.lines}</minimum>
+										</limit>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>${coverage.branches}</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
-	<profiles>
-
-    <profile>
-      <id>coverage</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>prepare-agent</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-		<execution>
-       			<id>report</id>
-       			<goals>
-         			<goal>report</goal>
-       			</goals>
-    		 </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
