--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,22 @@
 							</rules>
 						</configuration>
 					</execution>
+					<execution>
+                        <id>merge</id>
+                        <goals>
+                            <goal>merge</goal>
+                        </goals>
+                        <configuration>
+                            <fileSets>
+                                <fileSet implementation="org.apache.maven.shared.model.fileset.FileSet">
+                                    <directory>${project.basedir}</directory>
+                                    <includes>
+                                        <include>**/*.exec</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                        </configuration>
+                    </execution>
 				</executions>
 			</plugin>
 		</plugins>
